parser.output
Terminals unused in grammar

    FLOAT
    DOUBLE
    CHAR
    PRIVATE


State 75 conflicts: 14 reduce/reduce
State 76 conflicts: 14 reduce/reduce
State 77 conflicts: 14 reduce/reduce
State 78 conflicts: 14 reduce/reduce
State 81 conflicts: 14 reduce/reduce
State 91 conflicts: 4 reduce/reduce
State 97 conflicts: 14 reduce/reduce
State 129 conflicts: 14 reduce/reduce
State 143 conflicts: 1 shift/reduce


Grammar

    0 $accept: root "end of file"

    1 root: Goal

    2 Goal: MainClass ClassDeclaration_list

    3 ClassDeclaration_list: ε
    4                      | ClassDeclaration ClassDeclaration_list

    5 Type: INTIGER LBRACKET RBRACKET
    6     | BOOLEAN
    7     | INTIGER
    8     | IDENTIFIER

    9 statement: LBRACE statement_list RBRACE
   10          | IF LP expression RP statement
   11          | IF LP expression RP statement ELSE statement
   12          | WHILE LP expression RP statement
   13          | SYSTEM_OUT_PRINTLN LP expression RP SEMICOLON
   14          | IDENTIFIER ASSIGN expression SEMICOLON
   15          | IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
   16          | Type IDENTIFIER SEMICOLON

   17 MainClass: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LP STRING LBRACKET RBRACKET IDENTIFIER RP LBRACE statement_list RBRACE RBRACE

   18 ClassDeclaration: CLASS IDENTIFIER LBRACE variables MethodDeclaration_list RBRACE

   19 MethodDeclaration: PUBLIC Type IDENTIFIER LP parameter_sequence RP LBRACE Methodbody RETURN expression SEMICOLON RBRACE

   20 Methodbody: variables
   21           | statement_list

   22 parameter: Type IDENTIFIER

   23 parameter_list: parameter
   24               | parameter_list COMMA parameter

   25 parameter_sequence: parameter_list
   26                   | ε

   27 expression: expression PLUSOP expression
   28           | expression MINUSOP expression
   29           | expression MULTOP expression
   30           | expression AND expression
   31           | expression OR expression
   32           | expression EQ expression
   33           | expression LT expression
   34           | expression GT expression
   35           | expression LBRACKET expression RBRACKET
   36           | expression DOT length
   37           | expression DOT IDENTIFIER LP expression_sequence RP
   38           | IDENTIFIER
   39           | INT
   40           | TRUE
   41           | FALSE
   42           | THIS
   43           | NEW INTIGER LBRACKET expression RBRACKET
   44           | NEW IDENTIFIER LP RP
   45           | NOT expression
   46           | LP expression RP
   47           | factor

   48 expression_list: expression
   49                | expression_list COMMA expression

   50 expression_sequence: expression_list
   51                    | ε

   52 MethodDeclaration_list: ε
   53                       | MethodDeclaration MethodDeclaration_list

   54 statement_list: statement
   55               | statement statement_list

   56 VarDeclaration: Type IDENTIFIER SEMICOLON

   57 variables: ε
   58          | VarDeclaration variables

   59 factor: INT
   60       | LP expression RP
   61       | IDENTIFIER
   62       | MINUSOP factor
   63       | NOT factor
   64       | TRUE
   65       | FALSE
   66       | THIS


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    SYSTEM_OUT_PRINTLN <std::string> (258) 13
    WHILE <std::string> (259) 12
    PUBLIC <std::string> (260) 17 19
    CLASS <std::string> (261) 17 18
    VOID <std::string> (262) 17
    RETURN <std::string> (263) 19
    STATIC <std::string> (264) 17
    IF <std::string> (265) 10 11
    ELSE <std::string> (266) 11
    NEW <std::string> (267) 43 44
    THIS <std::string> (268) 42 66
    TRUE <std::string> (269) 40 64
    FALSE <std::string> (270) 41 65
    FLOAT <std::string> (271)
    DOUBLE <std::string> (272)
    CHAR <std::string> (273)
    PRIVATE <std::string> (274)
    IDENTIFIER <std::string> (275) 8 14 15 16 17 18 19 22 37 38 44 56 61
    EQ <std::string> (276) 32
    LT <std::string> (277) 33
    GT <std::string> (278) 34
    LBRACE <std::string> (279) 9 17 18 19
    RBRACE <std::string> (280) 9 17 18 19
    SEMICOLON <std::string> (281) 13 14 15 16 19 56
    LBRACKET <std::string> (282) 5 15 17 35 43
    RBRACKET <std::string> (283) 5 15 17 35 43
    ASSIGN <std::string> (284) 14 15
    DOT <std::string> (285) 36 37
    COMMA <std::string> (286) 24 49
    NOT <std::string> (287) 45 63
    AND <std::string> (288) 30
    OR <std::string> (289) 31
    BOOLEAN <std::string> (290) 6
    MAIN <std::string> (291) 17
    STRING <std::string> (292) 17
    INTIGER <std::string> (293) 5 7 43
    PLUSOP <std::string> (294) 27
    MINUSOP <std::string> (295) 28 62
    MULTOP <std::string> (296) 29
    INT <std::string> (297) 39 59
    LP <std::string> (298) 10 11 12 13 17 19 37 44 46 60
    RP <std::string> (299) 10 11 12 13 17 19 37 44 46 60
    length <std::string> (300) 36


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    root <Node *> (47)
        on left: 1
        on right: 0
    Goal <Node *> (48)
        on left: 2
        on right: 1
    ClassDeclaration_list <std::list<Node*>> (49)
        on left: 3 4
        on right: 2 4
    Type <std::string> (50)
        on left: 5 6 7 8
        on right: 16 19 22 56
    statement <Node *> (51)
        on left: 9 10 11 12 13 14 15 16
        on right: 10 11 12 54 55
    MainClass <Node *> (52)
        on left: 17
        on right: 2
    ClassDeclaration <Node *> (53)
        on left: 18
        on right: 4
    MethodDeclaration <Node *> (54)
        on left: 19
        on right: 53
    Methodbody <std::list<Node*>> (55)
        on left: 20 21
        on right: 19
    parameter <Node *> (56)
        on left: 22
        on right: 23 24
    parameter_list <std::list<Node*>> (57)
        on left: 23 24
        on right: 24 25
    parameter_sequence <std::list<Node*>> (58)
        on left: 25 26
        on right: 19
    expression <Node *> (59)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 10 11 12 13 14 15 19 27 28 29 30 31 32 33 34 35 36 37 43 45 46 48 49 60
    expression_list <std::list<Node*>> (60)
        on left: 48 49
        on right: 49 50
    expression_sequence <std::list<Node*>> (61)
        on left: 50 51
        on right: 37
    MethodDeclaration_list <std::list<Node*>> (62)
        on left: 52 53
        on right: 18 53
    statement_list <std::list<Node*>> (63)
        on left: 54 55
        on right: 9 17 21 55
    VarDeclaration <Node *> (64)
        on left: 56
        on right: 58
    variables <std::list<Node*>> (65)
        on left: 57 58
        on right: 18 20 58
    factor <Node *> (66)
        on left: 59 60 61 62 63 64 65 66
        on right: 47 62 63


State 0

    0 $accept: • root "end of file"

    PUBLIC  shift, and go to state 1

    root       go to state 2
    Goal       go to state 3
    MainClass  go to state 4


State 1

   17 MainClass: PUBLIC • CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LP STRING LBRACKET RBRACKET IDENTIFIER RP LBRACE statement_list RBRACE RBRACE

    CLASS  shift, and go to state 5


State 2

    0 $accept: root • "end of file"

    "end of file"  shift, and go to state 6


State 3

    1 root: Goal •

    $default  reduce using rule 1 (root)


State 4

    2 Goal: MainClass • ClassDeclaration_list

    CLASS  shift, and go to state 7

    $default  reduce using rule 3 (ClassDeclaration_list)

    ClassDeclaration_list  go to state 8
    ClassDeclaration       go to state 9


State 5

   17 MainClass: PUBLIC CLASS • IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LP STRING LBRACKET RBRACKET IDENTIFIER RP LBRACE statement_list RBRACE RBRACE

    IDENTIFIER  shift, and go to state 10


State 6

    0 $accept: root "end of file" •

    $default  accept


State 7

   18 ClassDeclaration: CLASS • IDENTIFIER LBRACE variables MethodDeclaration_list RBRACE

    IDENTIFIER  shift, and go to state 11


State 8

    2 Goal: MainClass ClassDeclaration_list •

    $default  reduce using rule 2 (Goal)


State 9

    4 ClassDeclaration_list: ClassDeclaration • ClassDeclaration_list

    CLASS  shift, and go to state 7

    $default  reduce using rule 3 (ClassDeclaration_list)

    ClassDeclaration_list  go to state 12
    ClassDeclaration       go to state 9


State 10

   17 MainClass: PUBLIC CLASS IDENTIFIER • LBRACE PUBLIC STATIC VOID MAIN LP STRING LBRACKET RBRACKET IDENTIFIER RP LBRACE statement_list RBRACE RBRACE

    LBRACE  shift, and go to state 13


State 11

   18 ClassDeclaration: CLASS IDENTIFIER • LBRACE variables MethodDeclaration_list RBRACE

    LBRACE  shift, and go to state 14


State 12

    4 ClassDeclaration_list: ClassDeclaration ClassDeclaration_list •

    $default  reduce using rule 4 (ClassDeclaration_list)


State 13

   17 MainClass: PUBLIC CLASS IDENTIFIER LBRACE • PUBLIC STATIC VOID MAIN LP STRING LBRACKET RBRACKET IDENTIFIER RP LBRACE statement_list RBRACE RBRACE

    PUBLIC  shift, and go to state 15


State 14

   18 ClassDeclaration: CLASS IDENTIFIER LBRACE • variables MethodDeclaration_list RBRACE

    IDENTIFIER  shift, and go to state 16
    BOOLEAN     shift, and go to state 17
    INTIGER     shift, and go to state 18

    $default  reduce using rule 57 (variables)

    Type            go to state 19
    VarDeclaration  go to state 20
    variables       go to state 21


State 15

   17 MainClass: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC • STATIC VOID MAIN LP STRING LBRACKET RBRACKET IDENTIFIER RP LBRACE statement_list RBRACE RBRACE

    STATIC  shift, and go to state 22


State 16

    8 Type: IDENTIFIER •

    $default  reduce using rule 8 (Type)


State 17

    6 Type: BOOLEAN •

    $default  reduce using rule 6 (Type)


State 18

    5 Type: INTIGER • LBRACKET RBRACKET
    7     | INTIGER •

    LBRACKET  shift, and go to state 23

    $default  reduce using rule 7 (Type)


State 19

   56 VarDeclaration: Type • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 24


State 20

   58 variables: VarDeclaration • variables

    IDENTIFIER  shift, and go to state 16
    BOOLEAN     shift, and go to state 17
    INTIGER     shift, and go to state 18

    $default  reduce using rule 57 (variables)

    Type            go to state 19
    VarDeclaration  go to state 20
    variables       go to state 25


State 21

   18 ClassDeclaration: CLASS IDENTIFIER LBRACE variables • MethodDeclaration_list RBRACE

    PUBLIC  shift, and go to state 26

    $default  reduce using rule 52 (MethodDeclaration_list)

    MethodDeclaration       go to state 27
    MethodDeclaration_list  go to state 28


State 22

   17 MainClass: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC • VOID MAIN LP STRING LBRACKET RBRACKET IDENTIFIER RP LBRACE statement_list RBRACE RBRACE

    VOID  shift, and go to state 29


State 23

    5 Type: INTIGER LBRACKET • RBRACKET

    RBRACKET  shift, and go to state 30


State 24

   56 VarDeclaration: Type IDENTIFIER • SEMICOLON

    SEMICOLON  shift, and go to state 31


State 25

   58 variables: VarDeclaration variables •

    $default  reduce using rule 58 (variables)


State 26

   19 MethodDeclaration: PUBLIC • Type IDENTIFIER LP parameter_sequence RP LBRACE Methodbody RETURN expression SEMICOLON RBRACE

    IDENTIFIER  shift, and go to state 16
    BOOLEAN     shift, and go to state 17
    INTIGER     shift, and go to state 18

    Type  go to state 32


State 27

   53 MethodDeclaration_list: MethodDeclaration • MethodDeclaration_list

    PUBLIC  shift, and go to state 26

    $default  reduce using rule 52 (MethodDeclaration_list)

    MethodDeclaration       go to state 27
    MethodDeclaration_list  go to state 33


State 28

   18 ClassDeclaration: CLASS IDENTIFIER LBRACE variables MethodDeclaration_list • RBRACE

    RBRACE  shift, and go to state 34


State 29

   17 MainClass: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID • MAIN LP STRING LBRACKET RBRACKET IDENTIFIER RP LBRACE statement_list RBRACE RBRACE

    MAIN  shift, and go to state 35


State 30

    5 Type: INTIGER LBRACKET RBRACKET •

    $default  reduce using rule 5 (Type)


State 31

   56 VarDeclaration: Type IDENTIFIER SEMICOLON •

    $default  reduce using rule 56 (VarDeclaration)


State 32

   19 MethodDeclaration: PUBLIC Type • IDENTIFIER LP parameter_sequence RP LBRACE Methodbody RETURN expression SEMICOLON RBRACE

    IDENTIFIER  shift, and go to state 36


State 33

   53 MethodDeclaration_list: MethodDeclaration MethodDeclaration_list •

    $default  reduce using rule 53 (MethodDeclaration_list)


State 34

   18 ClassDeclaration: CLASS IDENTIFIER LBRACE variables MethodDeclaration_list RBRACE •

    $default  reduce using rule 18 (ClassDeclaration)


State 35

   17 MainClass: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN • LP STRING LBRACKET RBRACKET IDENTIFIER RP LBRACE statement_list RBRACE RBRACE

    LP  shift, and go to state 37


State 36

   19 MethodDeclaration: PUBLIC Type IDENTIFIER • LP parameter_sequence RP LBRACE Methodbody RETURN expression SEMICOLON RBRACE

    LP  shift, and go to state 38


State 37

   17 MainClass: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LP • STRING LBRACKET RBRACKET IDENTIFIER RP LBRACE statement_list RBRACE RBRACE

    STRING  shift, and go to state 39


State 38

   19 MethodDeclaration: PUBLIC Type IDENTIFIER LP • parameter_sequence RP LBRACE Methodbody RETURN expression SEMICOLON RBRACE

    IDENTIFIER  shift, and go to state 16
    BOOLEAN     shift, and go to state 17
    INTIGER     shift, and go to state 18

    $default  reduce using rule 26 (parameter_sequence)

    Type                go to state 40
    parameter           go to state 41
    parameter_list      go to state 42
    parameter_sequence  go to state 43


State 39

   17 MainClass: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LP STRING • LBRACKET RBRACKET IDENTIFIER RP LBRACE statement_list RBRACE RBRACE

    LBRACKET  shift, and go to state 44


State 40

   22 parameter: Type • IDENTIFIER

    IDENTIFIER  shift, and go to state 45


State 41

   23 parameter_list: parameter •

    $default  reduce using rule 23 (parameter_list)


State 42

   24 parameter_list: parameter_list • COMMA parameter
   25 parameter_sequence: parameter_list •

    COMMA  shift, and go to state 46

    $default  reduce using rule 25 (parameter_sequence)


State 43

   19 MethodDeclaration: PUBLIC Type IDENTIFIER LP parameter_sequence • RP LBRACE Methodbody RETURN expression SEMICOLON RBRACE

    RP  shift, and go to state 47


State 44

   17 MainClass: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LP STRING LBRACKET • RBRACKET IDENTIFIER RP LBRACE statement_list RBRACE RBRACE

    RBRACKET  shift, and go to state 48


State 45

   22 parameter: Type IDENTIFIER •

    $default  reduce using rule 22 (parameter)


State 46

   24 parameter_list: parameter_list COMMA • parameter

    IDENTIFIER  shift, and go to state 16
    BOOLEAN     shift, and go to state 17
    INTIGER     shift, and go to state 18

    Type       go to state 40
    parameter  go to state 49


State 47

   19 MethodDeclaration: PUBLIC Type IDENTIFIER LP parameter_sequence RP • LBRACE Methodbody RETURN expression SEMICOLON RBRACE

    LBRACE  shift, and go to state 50


State 48

   17 MainClass: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LP STRING LBRACKET RBRACKET • IDENTIFIER RP LBRACE statement_list RBRACE RBRACE

    IDENTIFIER  shift, and go to state 51


State 49

   24 parameter_list: parameter_list COMMA parameter •

    $default  reduce using rule 24 (parameter_list)


State 50

   19 MethodDeclaration: PUBLIC Type IDENTIFIER LP parameter_sequence RP LBRACE • Methodbody RETURN expression SEMICOLON RBRACE

    SYSTEM_OUT_PRINTLN  shift, and go to state 52
    WHILE               shift, and go to state 53
    IF                  shift, and go to state 54
    IDENTIFIER          shift, and go to state 55
    LBRACE              shift, and go to state 56
    BOOLEAN             shift, and go to state 17
    INTIGER             shift, and go to state 18

    $default  reduce using rule 57 (variables)

    Type            go to state 57
    statement       go to state 58
    Methodbody      go to state 59
    statement_list  go to state 60
    VarDeclaration  go to state 20
    variables       go to state 61


State 51

   17 MainClass: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LP STRING LBRACKET RBRACKET IDENTIFIER • RP LBRACE statement_list RBRACE RBRACE

    RP  shift, and go to state 62


State 52

   13 statement: SYSTEM_OUT_PRINTLN • LP expression RP SEMICOLON

    LP  shift, and go to state 63


State 53

   12 statement: WHILE • LP expression RP statement

    LP  shift, and go to state 64


State 54

   10 statement: IF • LP expression RP statement
   11          | IF • LP expression RP statement ELSE statement

    LP  shift, and go to state 65


State 55

    8 Type: IDENTIFIER •
   14 statement: IDENTIFIER • ASSIGN expression SEMICOLON
   15          | IDENTIFIER • LBRACKET expression RBRACKET ASSIGN expression SEMICOLON

    LBRACKET  shift, and go to state 66
    ASSIGN    shift, and go to state 67

    $default  reduce using rule 8 (Type)


State 56

    9 statement: LBRACE • statement_list RBRACE

    SYSTEM_OUT_PRINTLN  shift, and go to state 52
    WHILE               shift, and go to state 53
    IF                  shift, and go to state 54
    IDENTIFIER          shift, and go to state 55
    LBRACE              shift, and go to state 56
    BOOLEAN             shift, and go to state 17
    INTIGER             shift, and go to state 18

    Type            go to state 68
    statement       go to state 58
    statement_list  go to state 69


State 57

   16 statement: Type • IDENTIFIER SEMICOLON
   56 VarDeclaration: Type • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 70


State 58

   54 statement_list: statement •
   55               | statement • statement_list

    SYSTEM_OUT_PRINTLN  shift, and go to state 52
    WHILE               shift, and go to state 53
    IF                  shift, and go to state 54
    IDENTIFIER          shift, and go to state 55
    LBRACE              shift, and go to state 56
    BOOLEAN             shift, and go to state 17
    INTIGER             shift, and go to state 18

    $default  reduce using rule 54 (statement_list)

    Type            go to state 68
    statement       go to state 58
    statement_list  go to state 71


State 59

   19 MethodDeclaration: PUBLIC Type IDENTIFIER LP parameter_sequence RP LBRACE Methodbody • RETURN expression SEMICOLON RBRACE

    RETURN  shift, and go to state 72


State 60

   21 Methodbody: statement_list •

    $default  reduce using rule 21 (Methodbody)


State 61

   20 Methodbody: variables •

    $default  reduce using rule 20 (Methodbody)


State 62

   17 MainClass: PUBLIC CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LP STRING LBRACKET RBRACKET IDENTIFIER RP • LBRACE statement_list RBRACE RBRACE

    LBRACE  shift, and go to state 73


State 63

   13 statement: SYSTEM_OUT_PRINTLN LP • expression RP SEMICOLON

    NEW         shift, and go to state 74
    THIS        shift, and go to state 75
    TRUE        shift, and go to state 76
    FALSE       shift, and go to state 77
    IDENTIFIER  shift, and go to state 78
    NOT         shift, and go to state 79
    MINUSOP     shift, and go to state 80
    INT         shift, and go to state 81
    LP          shift, and go to state 82

    expression  go to state 83
    factor      go to state 84


State 64

   12 statement: WHILE LP • expression RP statement

    NEW         shift, and go to state 74
    THIS        shift, and go to state 75
    TRUE        shift, and go to state 76
    FALSE       shift, and go to state 77
    IDENTIFIER  shift, and go to state 78
    NOT         shift, and go to state 79
    MINUSOP     shift, and go to state 80
    INT         shift, and go to state 81
    LP          shift, and go to state 82

    expression  go to state 85
    factor      go to state 84


State 65

   10 statement: IF LP • expression RP statement
   11          | IF LP • expression RP statement ELSE statement

    NEW         shift, and go to state 74
    THIS        shift, and go to state 75
    TRUE        shift, and go to state 76
    FALSE       shift, and go to state 77
    IDENTIFIER  shift, and go to state 78
    NOT         shift, and go to state 79
    MINUSOP     shift, and go to state 80
    INT         shift, and go to state 81
    LP          shift, and go to state 82

    expression  go to state 86
    factor      go to state 84


State 66

   15 statement: IDENTIFIER LBRACKET • expression RBRACKET ASSIGN expression SEMICOLON

    NEW         shift, and go to state 74
    THIS        shift, and go to state 75
    TRUE        shift, and go to state 76
    FALSE       shift, and go to state 77
    IDENTIFIER  shift, and go to state 78
    NOT         shift, and go to state 79
    MINUSOP     shift, and go to state 80
    INT         shift, and go to state 81
    LP          shift, and go to state 82

    expression  go to state 87
    factor      go to state 84


State 67

   14 statement: IDENTIFIER ASSIGN • expression SEMICOLON

    NEW         shift, and go to state 74
    THIS        shift, and go to state 75
    TRUE        shift, and go to state 76
    FALSE       shift, and go to state 77
    IDENTIFIER  shift, and go to state 78
    NOT         shift, and go to state 79
    MINUSOP     shift, and go to state 80
    INT         shift, and go to state 81
    LP          shift, and go to state 82

    expression  go to state 88
    factor      go to state 84


State 68

   16 statement: Type • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 89


State 69

    9 statement: LBRACE statement_list • RBRACE

    RBRACE  shift, and go to state 90


State 70
